--- a/ios/Podfile
+++ b/ios/Podfile
@@ -9,7 +9,7 @@ target 'wallet' do
   use_react_native!(
     :path => config[:reactNativePath],
     # to enable hermes on iOS, change `false` to `true` and then install pods
-    :hermes_enabled => false
+    :hermes_enabled => true
   )
 
   target 'walletTests' do
@@ -24,6 +24,10 @@ target 'wallet' do
   use_flipper!()
 
   post_install do |installer|
-    react_native_post_install(installer)
+    installer.pods_project.targets.each do |target|
+      target.build_configurations.each do |config|
+       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '10.0'
+      end
+     end
   end
 end
