--- a/package.json
+++ b/package.json
@@ -7,23 +7,30 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "android-build-bundle": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle",
+    "android-apk-release": "cd android && ./gradlew assembleRelease",
+    "android-apk-debug": "cd android && ./gradlew assembleDebug",
+    "clear-cache": "watchman watch-del-all && rm -f yarn.lock && rm -rf node_modules && yarn && yarn start --reset-cache"
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "^3.5.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "@types/realm": "^1.13.0",
     "@types/styled-components-react-native": "^5.1.1",
     "native-base": "^2.15.2",
     "react": "17.0.1",
     "react-native": "0.64.1",
+    "react-native-bootsplash": "^3.2.3",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.3.0",
     "react-native-swipe-list-view": "^3.2.7",
     "react-native-vector-icons": "^8.1.0",
+    "realm": "^10.4.1",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
